src/test/ui/nll/relate_tys/hr-fn-aaa-as-aba.stderr
error: higher-ranked subtype error
  --> $DIR/hr-fn-aaa-as-aba.rs:14:58
   |
LL |     let a: for<'a, 'b> fn(&'a u32, &'b u32) -> &'a u32 = make_it();
   |                                                          ^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/hr-fn-aaa-as-aba.rs:22:12
   |
LL |     let _: for<'a, 'b> fn(&'a u32, &'b u32) -> &'a u32 = make_it();
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

